Screening submit returns referral id on success
[#143996393]
